# MyNet

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  UavGPR_机器学习背景杂波抑制全项研究计划.docx  pytest.ini  requirements.txt  ruff.toml
uavgpr_simlab/: CHANGELOG.md  CURRENT_STATE.md  DEV_HANDOFF.md  README.md  TODO.md  install_gui_deps_into_gprmax_env.bat  pyproject.toml  requirements_gpu_extra.txt  requirements_gui.txt  run_gui.bat  setup_gprmax_4090_windows.bat  setup_laptop_4090_gpu_runtime.bat  setup_local_3060_gpu_runtime.bat  setup_uavgpr_gpu_runtime_windows.bat  启动_UavGPR-SimLab.bat
uavgpr_simlab/configs/: boreholes_example.csv  default_app.yaml  environment_3060_laptop.yaml  environment_gprmax_4090_windows.yml  materials_uavgpr_default.yaml  ml_pgda_csnet.yaml  pipeline_automation_template.yaml  pipeline_paper_simulation.yaml  pipeline_pgda_batch_v1.yaml  run_plan_3060_pilot_train_v1.yaml  run_plan_3060_pilot_v1.yaml  run_plan_3060_quick.yaml  run_plan_3060_smoke_safe.yaml  run_plan_4090_formal.yaml  run_plan_4090_validation_hifi.yaml  run_plan_paper_main_3000.yaml  run_plan_paper_main_500.yaml  run_plan_pgda_batch_v1_3060.yaml  run_plan_yingshan_sceneworld_pilot.yaml  run_plan_yingshan_sceneworld_smoke.yaml  run_plan_yingshan_sceneworld_smoke_v080a12.yaml  run_plan_yingshan_sceneworld_smoke_v080a14.yaml  run_plan_yingshan_sceneworld_ultra_tiny_v080a12.yaml  run_plan_yingshan_sceneworld_ultra_tiny_v080a13.yaml  uavgpr_ug10.yaml  yingshan_real_data_inventory.yaml
uavgpr_simlab/docs/: CURRENT_ARCHITECTURE.md  DATASET_SKELETON_CONTRACT.md  RELEASE_GUARDS.md  (+17 more)
(+3151 files in other folders)
