[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavgpr-simlab"
version = "0.8.0a38"
description = "Windows-first GUI for gprMax UAV-GPR simulation dataset generation"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "h5py>=3.9",
  "PyYAML>=6.0",
  "scikit-image>=0.21",
  "tqdm>=4.66"
]

[project.scripts]
uavgpr-simlab = "uavgpr_simlab.app:main"
uavgpr-simlab-cli = "uavgpr_simlab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
